// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Root > should render properly for anonymous users 1`] = `
<div
  class="css-bv0go7"
  data-component-name="app"
>
  <div>
    Helmet
  </div>
  <header
    class="css-157to9t"
    data-component-name="Header"
  >
    <div
      class="css-1ejvhcb"
      data-component-name="Container"
    >
      <div
        class="css-29z1qi"
      >
        <h3
          class="css-1accte4"
          data-component-name="H3"
        >
          Simple Message Application
        </h3>
      </div>
    </div>
  </header>
  <main
    class="css-v6l99m"
  >
    <div
      class="css-px2j5d"
      data-component-name="Login"
    >
      <div
        class="css-wc6egs"
        data-component-name="Box"
      >
        <div
          class="css-t2a0ka"
          data-component-name="Box"
        >
          <div
            data-component-name="LoginContainer"
          >
            <div
              class="css-1pedvdu"
              data-component-name="Box"
            >
              <form
                class="css-10gzlmm"
                data-component-name="Box"
                method="POST"
              >
                <div
                  class="css-1ejgv0f"
                  data-component-name="Field"
                >
                  <label
                    class="css-1pt39tn"
                    data-component-name="Label"
                    for="username"
                  >
                    Username
                    <span
                      class="css-143okea"
                      data-component-name="Icon"
                      name="asterisk"
                    >
                      <svg
                        height="12"
                        src="https://files.gilbarbara.dev/icons/asterisk.svg"
                        title="asterisk"
                        width="12"
                      />
                    </span>
                  </label>
                  <div
                    class="css-l5stqk"
                    data-component-name="ComponentWrapper"
                  >
                    <input
                      class="css-1izy3jk"
                      data-component-name="Input"
                      id="username"
                      name="username"
                      placeholder="Username"
                      type="text"
                    />
                  </div>
                  <div
                    class="css-x8y7di"
                    data-component-name="AssistiveContent"
                  />
                </div>
                <div
                  class="css-1ejgv0f"
                  data-component-name="Field"
                >
                  <label
                    class="css-1pt39tn"
                    data-component-name="Label"
                    for="password"
                  >
                    Password
                    <span
                      class="css-143okea"
                      data-component-name="Icon"
                      name="asterisk"
                    >
                      <svg
                        height="12"
                        src="https://files.gilbarbara.dev/icons/asterisk.svg"
                        title="asterisk"
                        width="12"
                      />
                    </span>
                  </label>
                  <div
                    class="css-l5stqk"
                    data-component-name="ComponentWrapper"
                  >
                    <input
                      class="css-1izy3jk"
                      data-component-name="Input"
                      id="password"
                      name="password"
                      placeholder="Password"
                      type="password"
                    />
                  </div>
                  <div
                    class="css-x8y7di"
                    data-component-name="AssistiveContent"
                  />
                </div>
                <div
                  class="css-18exx3r"
                  data-component-name="Spacer"
                >
                  <div
                    class="css-o4fmev"
                    data-component-name="SpacerItem"
                  >
                    <button
                      class="css-13ul09b"
                      data-component-name="Login"
                      disabled=""
                      type="submit"
                    >
                      Login
                    </button>
                  </div>
                  <div
                    class="css-o4fmev"
                    data-component-name="SpacerItem"
                  >
                    <a
                      class="css-13ul09b"
                      data-component-name="Button"
                      href="/signup"
                      type="button"
                    >
                      Signup
                    </a>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="css-mtlhd8"
    data-component-name="Box"
  >
    <div
      class="css-fd9se2"
      data-component-name="Container"
    >
      <div
        class="css-1xy02bk"
        data-component-name="Box"
      >
        <h6
          class="css-olwz62"
          data-component-name="H6"
        >
          app footer
        </h6>
      </div>
    </div>
  </footer>
  <div
    class="css-1ewh9kd"
  >
    <div
      class="css-vg32sl"
    >
      <div />
    </div>
    <div
      class="css-1r5pw8k"
    >
      <div />
    </div>
    <div
      class="css-50gqfe"
    >
      <div />
    </div>
    <div
      class="css-ypj8vw"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Root > should render properly for logged users 1`] = `
<div
  class="css-bv0go7"
  data-component-name="app"
>
  <div>
    Helmet
  </div>
  <header
    class="css-157to9t"
    data-component-name="Header"
  >
    <div
      class="css-1ejvhcb"
      data-component-name="Container"
    >
      <div
        class="css-29z1qi"
      >
        <h3
          class="css-1accte4"
          data-component-name="H3"
        >
          Simple Message Application
        </h3>
      </div>
      <button
        class="css-17rt720"
        data-component-name="Logout"
      >
        <span
          class="css-lo0v0o"
          data-component-name="Text"
        >
          logout
        </span>
        <span
          class="css-10mt42n"
          data-component-name="Icon"
          name="sign-out"
        >
          <svg
            height="16"
            src="https://files.gilbarbara.dev/icons/sign-out.svg"
            title="sign-out"
            width="16"
          />
        </span>
      </button>
    </div>
  </header>
  <main
    class="css-v6l99m"
  >
    <div
      data-to="/messages"
    >
      NAVIGATE
    </div>
  </main>
  <footer
    class="css-mtlhd8"
    data-component-name="Box"
  >
    <div
      class="css-fd9se2"
      data-component-name="Container"
    >
      <div
        class="css-1xy02bk"
        data-component-name="Box"
      >
        <h6
          class="css-olwz62"
          data-component-name="H6"
        >
          app footer
        </h6>
      </div>
    </div>
  </footer>
  <div
    class="css-1ewh9kd"
  >
    <div
      class="css-vg32sl"
    >
      <div />
    </div>
    <div
      class="css-1r5pw8k"
    >
      <div />
    </div>
    <div
      class="css-50gqfe"
    >
      <div />
    </div>
    <div
      class="css-ypj8vw"
    >
      <div>
        <div
          class="css-1cmax56 slide-left-enter slide-left-enter-active"
        >
          <div
            class="css-d735a"
            data-component-name="Alert"
            role="alert"
          >
            <span
              class="css-nri15g"
              data-component-name="Icon"
              name="bell"
            >
              <svg
                height="20"
                src="https://files.gilbarbara.dev/icons/bell.svg"
                title="bell"
                width="20"
              />
            </span>
            <span
              class="css-lo0v0o"
              data-component-name="Text"
            >
              <div
                class="css-185xs5d"
                data-component-name="Box"
              >
                Hello! And welcome suriya!
              </div>
              <button
                class="css-1sdkvsj"
                data-id="8cdee72f-28d4-4441-91f0-c61f6e3d9684"
                type="button"
              >
                <span
                  class="css-fjs4pi"
                  data-component-name="Icon"
                  name="times"
                >
                  <svg
                    height="10"
                    src="https://files.gilbarbara.dev/icons/times.svg"
                    title="times"
                    width="10"
                  />
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
